:bug: correctly align the navbar logo

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -39,6 +39,7 @@
 .navbar-logo {
   position: absolute;
   left: calc(50% - 1.5rem);
+  top: 1.6rem;
 
   .navbar-logo-image {
     height: 3rem;
